crates/biome_js_analyze/tests/specs/nursery/noPlaywrightUselessAwait/invalid/locator.js
await page.locator('.my-element');

